had a small overflow problem with .tweet footer and .new tweet. fixed both

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -65,8 +65,7 @@ body {
   background-color: #e8e8e8;
   padding: 5px;
   margin: 2em;
-  height: 160px;
-  overflow: auto; }
+  height: 160px; }
   .new-tweet h2 {
     border-bottom: thin solid black;
     text-align: left;
@@ -132,7 +131,6 @@ body {
     padding: 10px; }
   .tweet footer {
     border-top: 1px solid #e8e8e8;
-    overflow: auto;
     padding: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
